fixed text wrapping under destination pictures

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ ul {
     border-radius: 8px;
 }
 
+.loc {
+    width: 200px;
+}
+
 .leftlinks {
     display: flex;
     font-weight: 900;
@@ -87,12 +91,13 @@ ul {
 .location {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 20px;
+    align-items: start;
+    gap: 40px;
     margin-bottom: 25px;
     flex-wrap: wrap;
     border-radius: 8px;
     text-align: center;
+
    
 }
 
